# quick_dra

./: .clang-format  .clang-tidy  .covcollect.in  .covmodules  .gitignore  .gitmodules  CHANGELOG.md  CMakeGraphVizOptions.cmake  CMakeLists.txt  CODE_OF_CONDUCT.md  COMMITS.md  CONTRIBUTING.md  CPPLINT.cfg  LICENSE  README.md  conanfile.txt  rules.pvsconfig
libs/: CMakeLists.txt
libs/cli/: CMakeLists.txt
libs/cli/res/: version.rc
libs/cli/src/: builtins.cpp  builtins.hpp  cli_options.cpp  cli_options.hpp  commands.cpp  commands.hpp  main.cpp
libs/cli/src/insured/: command.cpp  insured_command.cpp
libs/cli/src/payer/: cmd_conversation.cpp  cmd_conversation.hpp  command.cpp  payer_command.cpp  payer_conversation.cpp  payer_conversation.hpp  validators.cpp  validators.hpp
libs/cli/src/root/: command.cpp
libs/cli/src/xml/: cli_options.cpp  cli_options.hpp  command.cpp  ctre_parsing.cpp  xml_command.cpp
libs/cli/tests/data/: .config-set-and-upgrade-.quick_dra-empty_config.yaml  .config-upgrade-.quick_dra-only_version.yaml  .config-upgrade-.quick_dra-simple_history.yaml  .quick_dra.001-edit-middle-no-salary.yaml  .quick_dra.001-edit-middle.yaml  .quick_dra.AB4123456.kowalski.yaml  .quick_dra.AB4123456.yaml  .quick_dra.AB4123456_50671500000.quarter.yaml  .quick_dra.AB4123456_50671500000.yaml  .quick_dra.ABC523456.yaml  .quick_dra.amend-history.yaml  .quick_dra.iksinski-only-jan.yaml  .quick_dra.iksinski-only-piotr.yaml  .quick_dra.insured.AAA000000_120k-v1.yaml  .quick_dra.insured.AAA000000_120k.yaml  .quick_dra.insured.AAA000000_25%.yaml  .quick_dra.insured.AAA000000_75%.yaml  .quick_dra.insured.AAA000000_full_time.yaml  .quick_dra.insured.AAA000000_full_time_with_payer.yaml  .quick_dra.insured.AB4123456_75%.yaml  .quick_dra.testing.yaml  quick-dra_202512-01.AB4123456_50671500000.xml  quick-dra_202512-01.AB4123456_50671500000_not-pretty-v2.xml  quick-dra_202601-01.AB4123456_50671500000.quarter.xml  quick-dra_202601-01_30%.xml
libs/gui/: CMakeLists.txt  test_offscreen.hpp
libs/gui/app/: CMakeLists.txt
libs/gui/app/res/: icon_svg.qrc  icon_win32.qrc  quick_dra.qrc
libs/gui/app/src/: main.cpp
libs/gui/controls/: CMakeLists.txt
libs/gui/controls/tests/: .gitignore  ControlsTest.cpp  ControlsTest.hpp  Forms.test.cpp  Glyph.test.cpp  PageScrollArea.test.cpp  PanelButtonGroup.test.cpp  WordWrap.test.cpp  options.test.cpp
libs/gui/gui/: CMakeLists.txt
libs/gui/gui/res/: icons.qrc
libs/gui/gui/tests/: Globals.test.cpp  Pages.test.cpp  TestApp.hpp
libs/gui/main/: CMakeLists.txt
libs/gui/main/res/: qdra-gui.exe.manifest  version.rc
libs/gui/main/src/: gui_tool.cpp  main.cpp  options.cpp
libs/gui/main/tests/: options.test.cpp
libs/gui/pages/: CMakeLists.txt
libs/gui/pages/tests/: MainWindow.test.cpp  PagesTest.cpp  PagesTest.hpp  PagesTest.verify.HomePage.cpp  PagesTest.verify.InsuredEditPage.cpp  PagesTest.verify.PayerEditPage.cpp  PagesTest.verify.PersonelPage.cpp  PagesTest.verify.PersonnelPage.cpp  PagesTest.verify.RemoveInsuredPage.cpp  PagesTest.verify.ReportFormPage.cpp  PagesTest.verify.ReportIdEditPage.cpp  page_verify.hpp
libs/gui/src/: main.cpp
libs/gui/testing/: CMakeLists.txt  offscreen.json
libs/gui/testing/include/: palette_override.hpp  stamper.hpp  test_offscreen.hpp  ui_helpers.hpp
libs/gui/testing/res/: icons.qrc
libs/gui/testing/src/: stamper.cpp  test_offscreen.cpp  ui_helpers.cpp
libs/gui/utils/: CMakeLists.txt
libs/gui/utils/tests/: FormData.test.cpp  FormDataPaths.hpp.in  LaidOut.test.cpp  TestApp.hpp  forms.test.cpp  report_format.qrc  utils.test.cpp
libs/libbase/: CMakeLists.txt  base.natvis
libs/libbase/include/: version.rc.inc
libs/libbase/src/base/: chrono.cpp  exec_path_posix.cpp  exec_path_win32.cpp  paths.cpp  str.cpp  types.cpp  unicode_icu.cpp  unicode_win32.cpp
libs/libbase/tests/: chrono.test.cpp  paths.test.cpp  str-toupper.test.cpp  str.test.cpp  types.test.cpp
libs/libcli/: CMakeLists.txt
libs/libcli/src/: builtins.cpp  commands.cpp
libs/libcli/src/config/: config_command.cpp
libs/libcli/src/insured/: insured_add_command.cpp  insured_add_conversation.cpp  insured_add_conversation.hpp  insured_command.cpp  insured_edit_command.cpp  insured_edit_conversation.cpp  insured_edit_conversation.hpp  (+3 more)
libs/libcli/tests/: basic.test.cpp  config.test.cpp  insured_add.test.cpp  insured_edit.test.cpp  insured_list.test.cpp  insured_remove.test.cpp  list.test.cpp  payer.test.cpp  run.cpp  run.hpp  xml.test.cpp
libs/libconv/: CMakeLists.txt
libs/libconv/src/: low_level.cpp  search.cpp  validators.cpp
libs/libconv/tests/: conversation.test.cpp  field_policy.test.cpp  low_level.get_field_answer.test.cpp  low_level.test.cpp  search.test.cpp
libs/libdra/: CMakeLists.txt
libs/libdra/src/: version.hpp.in
libs/libforms/: CMakeLists.txt
libs/libforms/tests/: debug_print.test.cpp  http.test.cpp  locale.test.cpp  options.test.cpp  presentation.test.cpp  summary.test.cpp  xml-format-tests.cpp  xml.test.cpp
libs/libgui/: CMakeLists.txt
libs/libgui/src/: dirfs.cpp  fs_common.cpp  gui_tool.cpp  tarball.cpp  tool.cpp  vfs.cpp
libs/libgui/tests/: dirfs.test.cpp  gui_tool.test.cpp  options.test.cpp  vfs.test.cpp
libs/liblex/: CMakeLists.txt
libs/liblex/tests/: tax.test.cpp  validators.test.cpp
libs/libmodels/: CMakeLists.txt
libs/libmodels/idl/: config.json  models.json  project-types.json  quick_dra.webidl
libs/libmodels/tests/: compiler.test.cpp  parser_debug.test.cpp  parser_impl.common.hpp  parser_impl.config.test.cpp  parser_impl.partial.test.cpp  parser_impl.templates.test.cpp  parser_impl.webui.test.cpp  partials_load_store.test.cpp  project_reader.test.cpp  value_formatter.test.cpp  varname.test.cpp  vars_and_state.test.cpp
libs/libpersist/: CMakeLists.txt
libs/libpersist/src/: parser.cpp  reader.cpp  ref.cpp  writer.cpp
libs/libpersist/tests/: parser.test.cpp
libs/libyaml/: CMakeLists.txt
libs/libyaml/src/: parser.cpp  reader.cpp
tools/qtxml-to-junit/: CMakeLists.txt
tools/qtxml-to-junit/src/: common.hpp  convert.cpp  junit_model.hpp  load.cpp  main.cpp  qt_model.hpp
(+509 files in other folders)
